# SocialMediaApp

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/chrissytopher/socialmedia/: AndroidAppViewModel.kt  Consts.android.kt  Crypto.android.kt  ImageDecoder.kt  ImageUtils.kt  MainActivity.kt  Platform.android.kt  RustCrypto.kt
composeApp/src/nativeInterop/cinterop/: rustCrypto.def
composeApp/src/nativeInterop/cinterop/rustCrypto/: rustCrypto.h
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift  Rust_Crypto.h  Rust_Crypto.m  iosApp-Bridging-Header.h  rust_crypto.swift  rust_crypto.swiftmodule
iosApp/iosApp.xcodeproj/: project.pbxproj
rust_crypto/: .gitignore  Cargo.toml  generate_swift.sh
rust_crypto/rust_cryptoFFI.xcframework/: Info.plist
rust_crypto/rust_cryptoFFI.xcframework/ios-arm64/rust_cryptoFFI.framework/: Info.plist
rust_crypto/rust_cryptoFFI.xcframework/ios-arm64/rust_cryptoFFI.framework/Modules/: module.modulemap
rust_crypto/rust_cryptoFFI.xcframework/ios-arm64_x86_64-simulator/rust_cryptoFFI.framework/Headers/: rust_cryptoFFI.h
rust_crypto/rust_cryptoFFI.xcframework/rust_cryptoFFI.xcframework/: Info.plist
rust_crypto/rust_cryptoFFI.xcframework/rust_cryptoFFI.xcframework/ios-arm64_x86_64-simulator/rust_cryptoFFI.framework/: Info.plist
rust_crypto/src/: lib.rs
server/: build.gradle.kts
shared/: build.gradle.kts
(+36 files in other folders)
