[package]
name = "rust_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = "0.15.0"
jni = "0.21.1"
log = "0.4.27"
openssl = { version = "0.10.72", features = ["vendored"] }
uniffi = { version = "0.29.1", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.1", features = [ "build" ] }

# [target.'cfg(ios)'.lib]
# crate-type = ["staticlib"]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[package.metadata.xcframework]
include-dir = "bindings"
iOS = true
macOS = false
simulators = true
zip = false
lib-type = "staticlib"